--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./js/jquery-1.12.3.min.js"></script>
     <script src="./js/owl.carousel.js"></script>
     <script src="./js/index.js"></script>
 </body>
