blog details page started

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             commodo commodo ac, malesuada eu nunc. Duis hendrerit eget tellus quis posuere. Donec eu
                             orci vestibulum, scelerisque nisl vitae, mattis neque.
                         </p>
-                        <a href="" class="read-more">Read More</a>
+                        <a href="./job-details.html" class="read-more">Read More</a>
                     </div>
                 </div>
             </div>
@@ -73,7 +73,7 @@
                             </div>
                         </div>
                         <h6>Fusce rutrum felis id risus maximus, et vestibulum mauris maximus.</h6>
-                        <a href="" class="read-more">Read More</a>
+                        <a href="./job-details.html" class="read-more">Read More</a>
                     </div>
                 </div>
                 <div class="item">
@@ -85,7 +85,7 @@
                             </div>
                         </div>
                         <h6>Fusce rutrum felis id risus maximus, et vestibulum mauris maximus.</h6>
-                        <a href="" class="read-more">Read More</a>
+                        <a href="./job-details.html" class="read-more">Read More</a>
                     </div>
                 </div>
                 <div class="item">
@@ -97,7 +97,7 @@
                             </div>
                         </div>
                         <h6>Fusce rutrum felis id risus maximus, et vestibulum mauris maximus.</h6>
-                        <a href="" class="read-more">Read More</a>
+                        <a href="./job-details.html" class="read-more">Read More</a>
                     </div>
                 </div>
             </div>
@@ -154,7 +154,7 @@
                         <img src="./images/blog-img5.png" class="img-fluid" alt="">
                         <div class="blog-img-desc">
                             <h6>Fusce rutrum felis id risus maximus, et vestibulum mauris maximus...</h6>
-                            <a href="" class="read-more">Read More</a>
+                            <a href="./job-details.html" class="read-more">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -168,7 +168,7 @@
                             </p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <span class="date">21 Aug 2022</span>
-                                <a href="" class="read-more">Read More</a>
+                                <a href="./job-details.html" class="read-more">Read More</a>
                             </div>
                         </li>
                         <li>
@@ -179,7 +179,7 @@
                             </p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <span class="date">21 Aug 2022</span>
-                                <a href="" class="read-more">Read More</a>
+                                <a href="./job-details.html" class="read-more">Read More</a>
                             </div>
                         </li>
                     </ul>
